added pug views

--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "pares-express",
+  "devDependencies": {
+    "pug": "^2.0.4"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "name": "pares",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.1"
-  }
+  "description": ""
 }
